# johnson

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: index.md
docs/api/: read_json.md
johnson/: cli.py  main.py  read_json.py
sample_jsons/: example_1_invalid.json
tests/: test_cli.py  test_johnson.py  test_read_json.py
