[tool.poetry]
name = "johnson"
version = "0.0.2"
description = "Pretty print .json data in your terminal"
authors = ["sjlva <rtsilva@bi4all.pt>"]
readme = "README.md"
license = "GPLv3"
packages = [{include = "johnson"}]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Environment :: Console",
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English"
]

[tool.poetry.urls]
"Documentation" = "https://pyjohnson.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/sjlva/johnson/issues"
"Source Code" = "https://github.com/sjlva/johnson"

[tool.poetry.scripts]
johnson = "johnson.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=johnson -vv"
post_test = "coverage html"
